[gd_scene load_steps=5 format=3 uid="uid://bstmxqst0psf1"]

[ext_resource type="Script" path="res://Scripts/guardabosques_quest.gd" id="1_en56f"]
[ext_resource type="Texture2D" uid="uid://buqaei781s8qi" path="res://Assets/Additional/FondoDialogo.png" id="1_vo6u3"]
[ext_resource type="FontFile" uid="uid://b0gfgt23frvcx" path="res://Grand9K Pixel.ttf" id="2_8e50n"]
[ext_resource type="AudioStream" uid="uid://d1q4rnbk3k6aj" path="res://Sound/misionCompleted.wav" id="4_81p76"]

[node name="guardabosques_quest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_en56f")

[node name="quest1_ui" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = -86.0
offset_top = -82.0
offset_right = 86.0
offset_bottom = -14.0
texture = ExtResource("1_vo6u3")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="name" type="RichTextLabel" parent="quest1_ui"]
texture_filter = 1
layout_mode = 0
offset_left = 12.0
offset_top = 5.0
offset_right = 310.0
offset_bottom = 42.0
scale = Vector2(0.5, 0.5)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_8e50n")
theme_override_font_sizes/normal_font_size = 24
text = "Guarda bosques quest:"
scroll_active = false

[node name="text" type="RichTextLabel" parent="quest1_ui"]
layout_mode = 0
offset_left = 13.0
offset_top = 28.0
offset_right = 313.0
offset_bottom = 76.0
scale = Vector2(0.4, 0.4)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_8e50n")
theme_override_font_sizes/normal_font_size = 16
text = "Roba todos los huevos de babosa
"

[node name="yesButton1" type="Button" parent="quest1_ui"]
layout_mode = 0
offset_left = 101.0
offset_top = 42.0
offset_right = 158.0
offset_bottom = 84.0
scale = Vector2(0.4, 0.4)
text = "yes"

[node name="noButtton1" type="Button" parent="quest1_ui"]
layout_mode = 0
offset_left = 127.0
offset_top = 42.0
offset_right = 184.0
offset_bottom = 84.0
scale = Vector2(0.4, 0.4)
text = "no"

[node name="no_quest" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = -82.0
offset_top = -69.0
offset_right = 82.0
offset_bottom = -10.0
texture = ExtResource("1_vo6u3")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="name" type="RichTextLabel" parent="no_quest"]
texture_filter = 1
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 304.0
offset_bottom = 42.0
scale = Vector2(0.5, 0.5)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_8e50n")
theme_override_font_sizes/normal_font_size = 24
text = "Guarda bosques quest:"
scroll_active = false

[node name="text" type="RichTextLabel" parent="no_quest"]
layout_mode = 0
offset_left = 12.0
offset_top = 25.0
offset_right = 269.0
offset_bottom = 61.0
scale = Vector2(0.4, 0.4)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_8e50n")
theme_override_font_sizes/normal_font_size = 16
text = "no hay ninguna quest
"

[node name="finished_quest" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = -83.0
offset_top = -73.0
offset_right = 83.0
offset_bottom = -10.0
texture = ExtResource("1_vo6u3")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="name" type="RichTextLabel" parent="finished_quest"]
texture_filter = 1
layout_mode = 0
offset_left = 12.0
offset_top = 5.0
offset_right = 308.0
offset_bottom = 42.0
scale = Vector2(0.5, 0.5)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_8e50n")
theme_override_font_sizes/normal_font_size = 24
text = "Guarda bosques quest:"
scroll_active = false

[node name="text" type="RichTextLabel" parent="finished_quest"]
layout_mode = 0
offset_left = 12.0
offset_top = 24.0
offset_right = 369.0
offset_bottom = 99.0
scale = Vector2(0.4, 0.4)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_8e50n")
theme_override_font_sizes/normal_font_size = 16
text = "¡Bien hecho! Gracias por la ayuda. Ahora dirígete a la cueva. Por cierto, puedes quedarte con los huevos."
scroll_active = false

[node name="completed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_81p76")
volume_db = -19.053

[connection signal="pressed" from="quest1_ui/yesButton1" to="." method="_on_yes_button_1_pressed"]
[connection signal="pressed" from="quest1_ui/noButtton1" to="." method="_on_no_buttton_1_pressed"]
